--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,12 @@
+<!-- // Date: Jan 15 2023
+// Modified By: Ferdinand Detres Jr
+// Attributions:
+https://www.google.com/books/edition/Getting_MEAN_with_Mongo_Express_Angular/sTgzEAAAQBAJ?hl=en&gbpv=1&dq=Getting+MEAN+with+MongoDB,+Express,+Angular,+and+Node+2+nd+Edition%3B+Simon+Holmes+and+Clive+Harber%3B+Manning+Publications+2019+pdf&printsec=frontcover
+// In-Class tutorials -->
+
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Nodebucket</title>
@@ -10,7 +17,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
 </body>
+
 </html>
